Fixed footer on mobiles

--- a/Stylesheets/headerANDfooter.css
+++ b/Stylesheets/headerANDfooter.css
@@ -249,15 +249,3 @@ body {
 
 
 /*--Footer---------------------------------------*/
-
-
-/*----------Mobile version----------------------------*/
-
-@media only screen and (max-device-width: 500px) {
-  #footer {
-    position: fixed;
-  }
-}
-
-
-/*----------Mobile version----------------------------*/
